Update url for user authentication
